--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -92,37 +92,37 @@
                                 <div class="col-12">
                                     <h3>Individuales</h3>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="1" name="riesgos_individuales[]" id="check_individual_1">
                                     <label class="form-check-label" for="check_individual_1">
                                         INICIO TEMPRANO AL TRABAJO INFANTIL
                                     </label>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="2" name="riesgos_individuales[]" id="check_individual_2">
                                     <label class="form-check-label" for="check_individual_2">
                                         AUSENTISMO ESCOLAR PRESENTE
                                     </label>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="3" name="riesgos_individuales[]" id="check_individual_3">
                                     <label class="form-check-label" for="check_individual_3">
                                         CAPACIDADES DIFERENTES
                                     </label>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="4" name="riesgos_individuales[]" id="check_individual_4">
                                     <label class="form-check-label" for="check_individual_4">
                                         AISLAMIENTO O TIMIDEZ
                                     </label>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="5" name="riesgos_individuales[]" id="check_individual_5">
                                     <label class="form-check-label" for="check_individual_5">
                                         AGRESIVO
                                     </label>
                                 </div>
-                                <div class="form-check col-12">
+                                <div class="form-check col-12 col-sm-6">
                                     <input class="form-check-input" type="checkbox" value="6" name="riesgos_individuales[]" id="check_individual_6">
                                     <label class="form-check-label" for="check_individual_6">
                                         CONSUMO DE DROGAS
@@ -139,10 +139,62 @@
                                 <div class="col-12">
                                     <h3>Familiares</h3>
                                 </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="1" name="riesgos_familiares[]" id="check_familiar_1">
+                                    <label class="form-check-label" for="check_familiar_1">
+                                        MALTRATO PSICOLOGICO O FISICO DE LOS PADRES
+                                    </label>
+                                </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="2" name="riesgos_familiares[]" id="check_familiar_2">
+                                    <label class="form-check-label" for="check_familiar_2">
+                                        CONSUMO DE ALCOHOL DE LOS PADRES
+                                    </label>
+                                </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="3" name="riesgos_familiares[]" id="check_familiar_3">
+                                    <label class="form-check-label" for="check_familiar_3">
+                                        PADRES QUE HUMILLAN Y HACEN SENTIR CULPA A LOS HIJOS
+                                    </label>
+                                </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="4" name="riesgos_familiares[]" id="check_familiar_4">
+                                    <label class="form-check-label" for="check_familiar_4">
+                                        PADRES AUSENTES
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="5" name="riesgos_familiares[]" id="check_familiar_5">
+                                    <label class="form-check-label" for="check_familiar_5">
+                                        EMBARAZO ADOLESCENTE
+                                    </label>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
                                     <h3>Entorno</h3>
+                                </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="1" name="riesgos_entorno[]" id="check_entorno_1">
+                                    <label class="form-check-label" for="check_entorno_1">
+                                        EXPUESTO A PANDILLAS O VENTA DE DROGA EN SU COLONIA
+                                    </label>
+                                </div>
+                                <div class="form-check col-12 col-sm-6">
+                                    <input class="form-check-input" type="checkbox" value="2" name="riesgos_entorno[]" id="check_entorno_2">
+                                    <label class="form-check-label" for="check_entorno_2">
+                                        BAJO NIVEL SOCIO ECONOMICO
+                                    </label>
+                                </div>
+                                <div class="form-check col-12">
+                                    <input class="form-check-input" type="checkbox" value="3" name="riesgos_entorno[]" id="check_entorno_3">
+                                    <label class="form-check-label" for="check_entorno_3">
+                                        PARTICIPACION EN ACTOS DELICTIVOS
+                                    </label>
+                                </div>
+                                <div class="form-group col-12">
+                                    <label>OBSERVACIONES</label>
+                                    <textarea name="riesgos_observaciones" class="form-control" cols="30" rows="10"></textarea>
                                 </div>
                             </div>
                         </div>
