--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -192,8 +192,10 @@
                                         PARTICIPACION EN ACTOS DELICTIVOS
                                     </label>
                                 </div>
+                                <div class="col-12">
+                                    <h3>OBSERVACIONES</h3>
+                                </div>
                                 <div class="form-group col-12">
-                                    <label>OBSERVACIONES</label>
                                     <textarea name="riesgos_observaciones" class="form-control" cols="30" rows="10"></textarea>
                                 </div>
                             </div>
