--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -193,7 +193,7 @@
                                     </label>
                                 </div>
                                 <div class="col-12">
-                                    <h3>OBSERVACIONES</h3>
+                                    <h3>Observaciones</h3>
                                 </div>
                                 <div class="form-group col-12">
                                     <textarea name="riesgos_observaciones" class="form-control" cols="30" rows="10"></textarea>
