--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -11,6 +11,8 @@
                     aria-selected="false">Personas De Contacto</a>
                 <a class="nav-item nav-link" id="nav-riesgos-psicosociales-tab" data-toggle="tab" href="#nav-riesgos-psicosociales" role="tab"
                     aria-controls="nav-riesgos-psicosociales" aria-selected="false">Riesgos Psicosociales</a>
+                <a class="nav-item nav-link" id="nav-psicotropicos-tab" data-toggle="tab" href="#nav-psicotropicos" role="tab"
+                    aria-controls="nav-psicotropicos" aria-selected="false">Psicotropicos</a>
             </div>
         </nav>
         <div class="col-12">
@@ -199,6 +201,16 @@
                                     <textarea name="riesgos_observaciones" class="form-control" cols="30" rows="10"></textarea>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane fade" id="nav-riesgos-psicotropicos" role="tabpanel" aria-labelledby="nav-riesgos-psicotropicos-tab">
+                        <div class="container">
+                            <table class="table">
+                                <tr>
+                                    <td></td>
+                                    <td>USO EN EL ÚLTIMO AÑO</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
