--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -203,12 +203,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane fade" id="nav-riesgos-psicotropicos" role="tabpanel" aria-labelledby="nav-riesgos-psicotropicos-tab">
+                    <div class="tab-pane fade" id="nav-psicotropicos" role="tabpanel" aria-labelledby="nav-psicotropicos-tab">
                         <div class="container">
                             <table class="table">
                                 <tr>
-                                    <td></td>
-                                    <td>USO EN EL ÚLTIMO AÑO</td>
+                                    <td colspan="2"></td>
+                                    <td colspan="4">USO EN EL ÚLTIMO AÑO</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                    <td>DOSIS Y PERIODO MAXIMO DEL CONSUMO</td>
+                                    <td>ABSTINENCIA</td>
+                                    <td>ADMINISTRACION</td>
+                                    <td>FECHA ULTIMO CONSUMO</td>
                                 </tr>
                             </table>
                         </div>
