--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -23,7 +23,7 @@
                         <div class="container-fluid">
                             <div class="row">
                                 <div class="form-group col-12 col-sm-6 custom-file">
-                                    <label for="nombre">Fotografía</label>
+                                    <label>Fotografía</label>
                                     <input type="file" class="custom-file-input" name="fotografia" id="fotografia">
                                     <label class="custom-file-label" for="fotografia">Elegir Archivo</label>
                                 </div>
