--- a/templates/agregar-paciente.html
+++ b/templates/agregar-paciente.html
@@ -22,10 +22,9 @@
                         aria-labelledby="nav-informacion-personal-tab">
                         <div class="container-fluid">
                             <div class="row">
-                                <div class="form-group col-12 col-sm-6 custom-file">
-                                    <label>Fotografía</label>
-                                    <input type="file" class="custom-file-input" name="fotografia" id="fotografia">
-                                    <label class="custom-file-label" for="fotografia">Elegir Archivo</label>
+                                <div class="form-group col-12 col-sm-6">
+                                    <label for="nombre">Fotografía</label>
+                                    <input type="file" class="form-control" name="fotografia" id="fotografia">
                                 </div>
                                 <div class="form-group col-12 col-sm-6">
                                     <label for="nombre">Nombre</label>
